--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "pngquant": "^1.3.0",
     "popper.js": "^1.12",
     "vue": "^2.5.7"
+  },
+  "dependencies": {
+    "font-awesome": "^4.7.0"
   }
 }
