--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true,
-		"disable-tls": true,
+		"disable-tls": false,
         "secure-http": false
     },
     "minimum-stability": "dev",
