--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "hootlex/laravel-friendships": "^1.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
+        "laravel/passport": "^6.0",
         "laravel/tinker": "^1.0",
         "spatie/laravel-permission": "^2.12"
     },
