--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "vue-google-autocomplete": "^1.1.0",
     "vue2-autocomplete-js": "^0.2.2"
   }
 }
