--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
+            "@php artisan package:discover",
+            "@php artisan storage:link"
         ]
     },
     "config": {
