--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "vue-croppa": "^1.3.6",
     "vue-google-autocomplete": "^1.1.0",
+    "vue-infinite-loading": "^2.3.1",
     "vue2-autocomplete-js": "^0.2.2"
   }
 }
