--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=eu-cdbr-west-02.cleardb.net
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=heroku_7885014d58015ff
-DB_USERNAME=b6a5e0594b8f19
-DB_PASSWORD=73eae102
+DB_DATABASE=homestead
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
