--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "imagemin-pngquant": "^5.0.1",
     "vue-croppa": "^1.3.6",
     "vue-google-autocomplete": "^1.1.0",
     "vue-infinite-loading": "^2.3.1",
