--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=ivgz2rnl5rh7sphb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=e553ima03yp55mty
+DB_USERNAME=tdf81iwvpdgpbnbp
+DB_PASSWORD=zqqgrhbair5cn57a
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
