--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-croppa": "^1.3.6",
     "vue-google-autocomplete": "^1.1.0",
     "vue-infinite-loading": "^2.3.1",
-    "vue2-autocomplete-js": "^0.2.2"
+    "vue2-autocomplete-js": "^0.2.2",
+    "vue2-google-maps": "^0.9.7"
   }
 }
